--- a/CursosDjango/contenido/templates/contenido/encabezado.html
+++ b/CursosDjango/contenido/templates/contenido/encabezado.html
@@ -3,12 +3,35 @@
 <head>
 
     <title>{% block titulo %}{% endblock %}</title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"crossorigin="anonymous"></script>
 </head>
 <body>
-    <a href="{%url 'Principal'%}">Principal</a>
-    <a href="{%url 'Cursos'%}">Cursos</a>
-    <a href="{%url 'Contacto'%}">Contactanos</a>
+
+
+        <div>
+            <nav class="navbar navbar-expand-lg bg-dark">
+                <div class="container-fluid">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active text-light" aria-current="page" href="{%url 'Principal'%}">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-light" href="{%url 'Cursos'%}">Cursos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-light" href="{%url 'Contacto'%}">Contacto</a>
+                      </li>
+                    </ul>
+                </div>
+              </nav>
+        </div>
+
+        <div class="container p-3">
+            {% block contenedor %}
+
+            {% endblock %}
+        </div>
 
     
 </body>
