--- a/CursosDjango/contenido/templates/contenido/encabezado.html
+++ b/CursosDjango/contenido/templates/contenido/encabezado.html
@@ -26,8 +26,13 @@
                 </div>
               </nav>
         </div>
+        
+        {%block encabezado%}
 
-        <div class="container p-3">
+        {%endblock%}
+
+        
+        <div class="container mt-4">
             {% block contenedor %}
 
             {% endblock %}
